--- a/public/Scss/Style.scss
+++ b/public/Scss/Style.scss
@@ -1,5 +1,14 @@
-@mixin Html{
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html{
     font-size: 1.5vh;
+    background-color:#086700;
+    padding: 0 !important;
+    margin: 0 !important;
+    
 }
 
 @mixin Background{
